# keycrab

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  mock.db
.bld/: config.yaml  pr.yaml
.bld/dockerfiles/: Dockerfile
.bld/release/: all.yaml  extension.yaml  github.yaml  server.yaml
.github/: CODEOWNERS
.github/workflows/: pr.yml  release.yml
browser/base/: index.html  index.js
browser/ff/: manifest.json
browser/ff/content_scripts/: fillForm.js
browser/ff/popup/: fill_form.js  keycrab.html
browser/keycrab_ext/: Cargo.toml  Dioxus.toml  Trunk.toml  build.rs  index.html  manifest.json  package-lock.json  release.sh  styles.css
browser/keycrab_ext/scripts/: fill_form.js  package-lock.json  package.json  sample.js  tailwind.config.js  tailwind.css
browser/keycrab_ext/src/: app.rs  button.rs  domain.rs  main.rs  tab.rs  title.rs
browser/keycrab_ext/src/browser/: mod.rs  script.rs  tab.rs
browser/keycrab_ext/src/components/: domain_card.rs  domains.rs  domains_empty.rs  domains_error.rs  domains_loading.rs  domains_table.rs  fill.rs  mod.rs
browser/keycrab_ext/src/models/: domains.rs  message.rs  mod.rs  script.rs  tab.rs
crates/keycrab_cli/: Cargo.toml
crates/keycrab_cli/src/: env.rs  lib.rs
crates/keycrab_cli/src/add/: mod.rs
crates/keycrab_cli/src/get/: mod.rs
crates/keycrab_cli/src/remove/: mod.rs
crates/keycrab_cli/src/server/: mod.rs
crates/keycrab_cli/src/test/: mod.rs
crates/keycrab_core/: Cargo.toml
crates/keycrab_crypt/: Cargo.toml
crates/keycrab_ext/: Cargo.toml  Trunk.toml  fill_form.js  index.html  manifest.json  styles.css  tailwind.config.js
crates/keycrab_ext/scripts/: fill_form.js  startup.js
crates/keycrab_ext/src/: app.rs  button.rs  context.rs  domain.rs  main.rs  search.rs  settings.rs  title.rs
crates/keycrab_ext/src/browser/: clipboard.rs  mod.rs  script.rs  tab.rs
crates/keycrab_ext/src/common/: button.rs  checkbox.rs  field.rs  icon.rs  input.rs  link.rs  mod.rs
crates/keycrab_ext/src/domain/: api.rs  clipboard.rs  entry.rs  fill.rs  mod.rs
crates/keycrab_ext/src/models/: mod.rs  tab.rs
crates/keycrab_models/: Cargo.toml
crates/keycrab_server/: Cargo.toml
crates/keycrab_server/src/: errors.rs  lib.rs
crates/keycrab_server/src/layers/: database.rs
crates/keycrab_server/src/requests/: mod.rs  password.rs  passwords.rs
crates/keycrab_server/src/responses/: errors.rs  mod.rs  password.rs  passwords.rs
crates/keycrab_server/src/routes/: machine_users.rs  mod.rs  passwords.rs
crates/keycrab_server/src/state/: config.rs  database.rs  mod.rs
queries/passwords/: create.sql  delete.sql  get_by_domain.sql  get_by_user_id.sql  insert.sql
queries/users/: create.sql  delete.sql  get_by_name.sql  insert.sql
src/: main.rs
(+24 files in other folders)
