[package]
name = "keycrab_ext"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
js-sys = "0.3.77"
keycrab_models = { path = "../../crates/keycrab_models" }
leptos = { version = "0.8.2", features = ["csr"] }
leptos-use = "0.16.2"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
