[package]
name = "keycrab_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keycrab_core = { path = "../keycrab_core" }
keycrab_crypt = { path = "../keycrab_crypt" }
keycrab_models = { path = "../keycrab_models" }
anyhow = "1.0.70"
axum = "0.6.11"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
sqlx = { version = "0.6.2", features = ["sqlite"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
nix = "0.26.2"
tower-http = { version = "0.4.0", features = ["cors"] }
